@@ -4,7 +4,9 @@ ag_event.o
 ag_hbox.o
 ag_label.o
 ag_menu.o
+ag_pixmap.o
 ag_surface.o
+ag_text.o
 ag_unit.o
 ag_vbox.o
 ag_widget.o
