@@ -1,1 +1,1 @@
-agar.gui.widget.pixmap agar-gui-widget-pixmap.ads
+agar.gui.widget.pixmap agar-gui-widget-pixmap.ads agar-gui-widget-pixmap.adb
